# aist_phoxi_camera

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.ORG  Doxyfile  LICENSE  README-ja.md  README.md  nodelet_description.xml  package.xml  package.xml.ORG  readme.txt  setup.py
action/: EPick.action  EPickCommand.action
aist_phoxi_camera/: CMakeLists.txt  README.md
aist_phoxi_camera/config/: 1711015.yaml
aist_phoxi_camera/install-scripts/: install-photoneo.sh  install-phoxi-control.sh
aist_phoxi_camera/launch/: run.launch  test.launch
aist_phoxi_camera/src/: Camera.cpp  aist_phoxi_camera_example.py  nodelet.cpp
aist_phoxi_camera/urdf/: phoxi_m_camera.urdf.xacro
blob_test/cfg/: O2asBlobDetection.cfg
config/: a_phoxi_m_camera.yaml  aist_robotiq.rviz  cmodel_robotiq_140.yaml  cmodel_robotiq_85.yaml  cmodel_robotiq_hande.yaml  controllers.yaml  file_camera.yaml  file_camera_color.yaml  motioncam.yaml  phoxi.yaml  robotiq_140.yaml  robotiq_85.yaml  robotiq_epick.yaml  robotiq_hande.yaml
config/robot_controllers/: robotiq_140_controller.yaml  robotiq_85_controller.yaml  robotiq_hande_controller.yaml
include/aist_robotiq/: robotiq_driver.h
khi_moveit_config/: .setup_assistant  .setup_assistant~  CMakeLists.txt  package.xml
khi_moveit_config/config/: khi_base_scene.srdf
khi_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  khi_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kitting_list_loader/: CMakeLists.txt  package.xml
kitting_list_loader/config/: kitting_item_list.yaml
kitting_list_loader/launch/: load_kitting_item_params.launch
kitting_list_loader/scripts/: kitting_list_loader.py
launch/: aist_phoxi_camera.rviz  cmodel_action_controller.launch  cmodel_controller.launch  cmodel_driver.launch  ft300.launch  gazebo.launch  launch.py  run.launch  run_with_config.launch  test.launch  test_client.launch  ur_cmodel_action_controller.launch  urcap_cmodel_action_controller.launch
meshes/collision/: MotionCam3D_M.STL  MotionCam3D_M.c.STL  PhoXi_L.c.STL  PhoXi_M.c.STL  PhoXi_S.c.STL  PhoXi_XL.c.STL  PhoXi_XS.c.STL  robotiq_dual_bracket.stl  robotiq_epick.stl
meshes/visual/: PhoXi_L.f.STL  PhoXi_M.f.STL  PhoXi_S.f.STL  PhoXi_XL.f.STL  PhoXi_XS.f.STL  robotiq_dual_coupling.stl
msg/: CModelCommand.msg  CModelStatus.msg  EPickCommand.msg  EPickStatus.msg
rq85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rq85_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  rq85_base_scene.srdf
rq85_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  rq85_base_scene_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
scripts/: check_depth_consistency.py  cmodel_controller.py  cmodel_rtu_driver.py  cmodel_tcp_driver.py  cmodel_urcap_driver.py  cmodel_urscript_driver.py  epick_controller.py  epick_urcap_driver.py  test_client.py  test_cmodel_client.py  test_epick_client.py
sfetch_moveit_config/: .setup_assistant  .setup_assistant~  CMakeLists.txt  package.xml
sfetch_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sfetch_base_scene.srdf
sfetch_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sfetch_base_scene_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/: Camera.cpp  Camera.h  disable_link_plugin.cpp  ft300_driver.cpp  main.cpp  mimic_joint_plugin.cpp  nodelet.cpp  robotiq_driver.cpp
src/aist_robotiq/: __init__.py  cmodel_base.py  cmodel_modbus.py  cmodel_urcap.py  cmodel_urscript.py  epick_urcap.py
ur5_moveit_config_UNUSED/cmake/: ur5_moveit_configConfig.cmake
ur_description/cmake/: ur_descriptionConfig.cmake
urdf/: MotionCam3D_M.urdf  PhoXi3DscannerM.urdf  PhoXi3Dscanner_macro.xacro  PhoXi3Dscanner_values.xacro  ft300.urdf  ft300.urdf.xacro  kosmek_manual_exchanger.urdf  kosmek_manual_exchanger.urdf.xacro  motioncam_m_camera.urdf  motioncam_m_camera.urdf.xacro  phoxi_l_camera.urdf  phoxi_l_camera.urdf.xacro  phoxi_m_camera.urdf  phoxi_m_camera.urdf.xacro  phoxi_s_camera.urdf  phoxi_s_camera.urdf.xacro  phoxi_xl_camera.urdf  phoxi_xl_camera.urdf.xacro  phoxi_xs_camera.urdf  phoxi_xs_camera.urdf.xacro  robotiq_140_gripper.urdf  robotiq_140_gripper.urdf.xacro  robotiq_85_gripper.urdf  robotiq_85_gripper.urdf.xacro  robotiq_arg2f.xacro  robotiq_arg2f_coupling.urdf  robotiq_arg2f_coupling.urdf.xacro  robotiq_dual_bracket.urdf  robotiq_dual_bracket.urdf.xacro  robotiq_dual_coupling.urdf  robotiq_dual_coupling.urdf.xacro  robotiq_epick.urdf  robotiq_epick.urdf.xacro  robotiq_hande_gripper.urdf  robotiq_hande_gripper.urdf.xacro
urdf_converter/include/: urdf_converter.h
