<?xml version="1.0"?>
<package format="2">
  <name>aist_phoxi_camera</name>
  <version>1.0.0</version>
  <description>The aist_phoxi_camera is a package that enables interfacing Photoneo Phoxi Scanner/Camera from ROS</description>

  <author>Toshio UESHIBA</author>
  <maintainer email="t.ueshiba@paist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>
  <url>https://github.com/Automation-Research-Team/aist_phoxi_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>

</package>
